fix: JobSearch overflow-x scroll removed

--- a/src/pages/JobSearch/JobSearch.css
+++ b/src/pages/JobSearch/JobSearch.css
@@ -3,7 +3,6 @@
     height: 100%;
     padding-top: 3rem;
     box-sizing: border-box;
-    overflow-x: scroll;
     gap: 2rem;
 }
 
